--- a/css/main.css
+++ b/css/main.css
@@ -97,9 +97,16 @@ h1, h2, h3, h4, h5, h6 {
     padding: 75px 0;
     background: #fff;
 }
-#page-experience {
+#page-essays {
     padding: 75px 0;
     background: #f7f7f7;
+}
+
+.essay-text {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.7;
 }
 #page-portfolio {
     padding: 75px 0;
@@ -279,6 +286,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 100px;
     height: 2px;
     margin: auto;
+    /*margin-bottom: 30px;*/
     background: #161C92;
     color: #161C92;
 }
